--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -3,14 +3,12 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-Hello {{ controller_name }}!<br/>
-<ul>
-    <li><a href="/api">API Platform's Swagger UI</a></li>
-    <li><a href="/api/monsters.jsonld">API Platform: collection of monsters (GET/JSON-LD)</a></li>
-</ul>
-<br/>
+        <a href="https://github.com/dunglas/frankenphp">
+                <img width="400" src="https://github.com/dunglas/frankenphp/raw/main/frankenphp.png" alt="FrankenPHP"/>
+        </a>
 
-<a href="https://github.com/dunglas/frankenphp">
-    <img width="400" src="https://github.com/dunglas/frankenphp/raw/main/frankenphp.png" alt="FrankenPHP"/>
-</a>
+        <img src="{{ asset('build/images/1.jpg')| imagine_filter('logo') }}" alt="1">
+        <img src="{{ asset('build/images/2.jpg')| imagine_filter('logo') }}" alt="2">
+        <img src="{{ asset('build/images/3.jpg')| imagine_filter('logo') }}" alt="3">
+
 {% endblock %}
